--- a/C_Sharp_Challenge_Skeleton.csproj
+++ b/C_Sharp_Challenge_Skeleton.csproj
@@ -14,6 +14,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="answer.dll" />
+    <None Remove="answer.so" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="answer.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="answer.so">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
