--- a/C_Sharp_Challenge_Skeleton.csproj
+++ b/C_Sharp_Challenge_Skeleton.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hippie.Unchecked" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
